game: add goal scoring regions and render them
Working towards completion of #8

--- a/src/config.json
+++ b/src/config.json
@@ -32,5 +32,6 @@
 	// invuln in terms of frames
 	"thief_invuln_time": 15,
 	// rotation in terms of degrees per frame
-	"bird_rotation_speed": 5
+	"bird_rotation_speed": 5,
+	"goal_size": [70, 300]
 }
