--- a/src/config.json
+++ b/src/config.json
@@ -35,5 +35,6 @@
 	// rotation in terms of degrees per frame
 	"bird_rotation_speed": 5,
 	"goal_size": [70, 300],
-	"score_size": 150
+	"score_size": 150,
+	"ball_kickoff_speed": 7
 }
